objects/UEH_Recipient_Module_Handler__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping of recipient email addresses to the appropriate handler class for new messages</description>
    <fields>
        <fullName>Module_Handler_Class__c</fullName>
        <inlineHelpText>Name of the Apex class that should handle inbound messages for this email address (do not include .cls)</inlineHelpText>
        <label>Module Handler Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <inlineHelpText>Friendly name of the module the email address is mapped to</inlineHelpText>
        <label>Module Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Email_Address__c</fullName>
        <description>Duplicated from the Name field so we can enforce uniqueness</description>
        <inlineHelpText>The email address that the inbound message was sent to (an alias for an Apex Email Service) - copy this address to the Name field as well</inlineHelpText>
        <label>Recipient Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UEH Recipient Module Handler</label>
</CustomObject>